--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,3 @@
-
 {
   "manifest_version": 3,
   "name": "Quick Tab Navigator",
@@ -23,8 +22,8 @@
     "extension_pages": "script-src 'self'; object-src 'self'"
   },
   "icons": {
-    "16": "public/favicon.ico",
-    "48": "public/favicon.ico",
-    "128": "public/favicon.ico"
+    "16": "favicon.ico",
+    "48": "favicon.ico",
+    "128": "favicon.ico"
   }
 }
